Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4638

CONNECT: Server crashes in CHRBLK::SetValue with an indexed not-null ENUM column

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.3
    • 10.0.4
    • None

    Description

      #3  <signal handler called>
      #4  0x0000000000f00152 in CHRBLK::SetValue (this=0x7fb3d3fffc28, sp=0x7fb3d3fff880 "N.America", len=9, n=0) at 10.0/storage/connect/valblk.cpp:605
      #5  0x0000000000f0002a in CHRBLK::SetValue (this=0x7fb3d3fffc28, sp=0x7fb3d3fff880 "N.America", n=0) at 10.0/storage/connect/valblk.cpp:576
      #6  0x0000000000efff23 in CHRBLK::SetValue (this=0x7fb3d3fffc28, valp=0x7fb3d3fff840, n=0) at 10.0/storage/connect/valblk.cpp:563
      #7  0x0000000000f1bea8 in KXYCOL::SetValue (this=0x7fb3d3fffae0, colp=0x7fb3d3fff7b8, i=0) at 10.0/storage/connect/xindex.cpp:2922
      #8  0x0000000000f13b14 in XINDEX::Make (this=0x7fb3d3fff960, g=0x7fb3dc15f6a0, sxp=0x0) at 10.0/storage/connect/xindex.cpp:409
      #9  0x0000000000ee6654 in TDBDOS::MakeIndex (this=0x7fb3d3fff3f0, g=0x7fb3dc15f6a0, pxdf=0x7fb3d3fff2d0, add=false) at 10.0/storage/connect/tabdos.cpp:554
      #10 0x0000000000ee5a46 in TDBDOS::ResetTableOpt (this=0x7fb3d3fff3f0, g=0x7fb3dc15f6a0, dox=true) at 10.0/storage/connect/tabdos.cpp:442
      #11 0x0000000000ead9a4 in CntCloseTable (g=0x7fb3dc15f6a0, tdbp=0x7fb3d3fff3f0) at 10.0/storage/connect/connect.cc:564
      #12 0x0000000000e9d144 in ha_connect::CloseTable (this=0x7fb3dc15e918, g=0x7fb3dc15f6a0) at 10.0/storage/connect/ha_connect.cc:1249
      #13 0x0000000000ea3dac in ha_connect::external_lock (this=0x7fb3dc15e918, thd=0x3e9d5b0, lock_type=2) at 10.0/storage/connect/ha_connect.cc:2923
      #14 0x000000000099d905 in handler::ha_external_lock (this=0x7fb3dc15e918, thd=0x3e9d5b0, lock_type=2) at 10.0/sql/handler.cc:5511
      #15 0x0000000000afd916 in unlock_external (thd=0x3e9d5b0, table=0x7fb3dc007578, count=1) at 10.0/sql/lock.cc:671
      #16 0x0000000000afca00 in mysql_unlock_tables (thd=0x3e9d5b0, sql_lock=0x7fb3dc007550, free_lock=true) at 10.0/sql/lock.cc:382
      #17 0x00000000005f6a45 in close_thread_tables (thd=0x3e9d5b0) at 10.0/sql/sql_base.cc:1545
      #18 0x00000000006a431e in mysql_execute_command (thd=0x3e9d5b0) at 10.0/sql/sql_parse.cc:4943
      #19 0x00000000006a8d9a in mysql_parse (thd=0x3e9d5b0, rawbuf=0x7fb3dc02b6a8 "INSERT INTO t1 VALUES\n('N.America','test1','5a'),('Europe','test1','5b')", length=72, parser_state=0x7fb3e4466510) at 10.0/sql/sql_parse.cc:6176
      #20 0x00000000006934d5 in dispatch_command (command=COM_QUERY, thd=0x3e9d5b0, packet=0x3ea26f1 "INSERT INTO t1 VALUES\n('N.America','test1','5a'),('Europe','test1','5b')", packet_length=72) at 10.0/sql/sql_parse.cc:1274
      #21 0x0000000000692172 in do_command (thd=0x3e9d5b0) at 10.0/sql/sql_parse.cc:983
      #22 0x00000000008526f8 in do_handle_one_connection (thd_arg=0x3e9d5b0) at 10.0/sql/sql_connect.cc:1267
      #23 0x0000000000852213 in handle_one_connection (arg=0x3e9d5b0) at 10.0/sql/sql_connect.cc:1181
      #24 0x0000000000c7207d in pfs_spawn_thread (arg=0x3e7f730) at 10.0/storage/perfschema/pfs.cc:1800
      #25 0x00007fb3f27a3e9a in start_thread (arg=0x7fb3e4467700) at pthread_create.c:308
      #26 0x00007fb3f1881cbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      bzr version-info

      revision-id: sergii@pisem.net-20130610064025-makoe3xkewwwky8j
      revno: 3761
      branch-nick: 10.0

      Test case:

      # Run with CONNECT engine (--plugin-connect or plugin-load=ha_connect.so)
       
      CREATE TABLE t1 (a ENUM('N.America','Africa','Europe','Antarctica') NOT NULL,
       b VARCHAR(5),
       c VARCHAR(2),
       INDEX(a)
       ) ENGINE=CONNECT TABLE_TYPE=DOS;
      INSERT INTO t1 VALUES
       ('N.America','test1','5a'),('Europe','test1','5b');

      Attachments

        Activity

          People

            bertrandop Olivier Bertrand
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2d
                2d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.