- Fix MDEV-4638

modified:
  storage/connect/ha_connect.cc
  storage/connect/valblk.cpp

- Add trace in tabmul

modified:
  storage/connect/tabmul.cpp